syntax = "proto3";

package com.tales.terra.shared.v1.user.v1;

option java_multiple_files = true;

message User {
  string id = 1;
  string first_name = 2;
  string last_name = 3;
  string email_address = 4;
  string created_at = 5;
  string updated_at = 6;
  string deleted_at = 7;
}
